Search player by name functionality was added
